--- a/css/navbar.css
+++ b/css/navbar.css
@@ -7,8 +7,16 @@
   font-weight: 300;
 }
 
+.topnav {
+  background-color: #fff7fc;
+  position: fixed;
+  top: 0;
+  width: 70%;
+  z-index: 1;
+}
+
 #leftnav {
-  float:left;
+    float:left;
 }
 
 .nav .active {
@@ -19,16 +27,8 @@
   text-decoration: none;
 }
 
-.nav:hover {
+.nav:hover a {
   color: #5e5e5e;
-}
-
-.topnav {
-  background-color: #fff7fc;
-  position: fixed;
-  top: 0;
-  width: 70%;
-  z-index: 1;
 }
 
 @media screen and (max-width: 500px) {
